Fix authentication prompt not being shown

Calling job->setUiDelegate(nullptr) prevents the authentication prompt from being displayed, even if it's been enabled

BUG: 460944